--- a/cliqz@cliqz.com/chrome/skin/browser_new.css
+++ b/cliqz@cliqz.com/chrome/skin/browser_new.css
@@ -226,19 +226,19 @@
 
 /* default btn colours */
 .cqz-ez-generic-box .cqz-ez-btn:nth-of-type(1) {
- background-color: #2460D9;
+ background-color: #5267a2;
 }
 
 .cqz-ez-generic-box .cqz-ez-btn:nth-of-type(2) {
- background-color: #61A5F6;
+ background-color: #1e5cdc;
 }
 
 .cqz-ez-generic-box .cqz-ez-btn:nth-of-type(3) {
- background-color: #3BC5F9;
+ background-color: #5ea3f9;
 }
 
 .cqz-ez-generic-box .cqz-ez-btn {
- background-color: #ACC8E1;
+ background-color: #2fc4fc;
 }
 
 .cqz-ez-generic-opt {
