--- a/cliqz@cliqz.com/chrome/skin/browser_new.css
+++ b/cliqz@cliqz.com/chrome/skin/browser_new.css
@@ -476,8 +476,8 @@
   padding: 5px 10px;
   box-sizing: border-box;
   -mox-box-sizing: border-box;
-  position: absolute;
-  bottom: -35px;
+  position: relative;
+  bottom:0px;
   width: 100%;
 }
 
