video cat at the bottom

--- a/cliqz@cliqz.com/chrome/skin/browser_new.css
+++ b/cliqz@cliqz.com/chrome/skin/browser_new.css
@@ -419,6 +419,7 @@
 /* EZ video */
 .cqz-ez-video-title {
   background-image: url(http://cdn.cliqz.com/extension/EZ/video/y_search.png);
+  margin-bottom: 18px;
 }
 
 
