--- a/cliqz@cliqz.com/chrome/skin/browser_new.css
+++ b/cliqz@cliqz.com/chrome/skin/browser_new.css
@@ -17,6 +17,12 @@
 }
 
 
+/* reset default browser settings */
+* {
+    padding: 0;
+    margin: 0;
+}
+
 /* BROWSER */
 #urlbar[focused="true"] {
 	/*box-shadow: 0px 0px 0px black !important;*/
@@ -490,7 +496,7 @@
 
 .cqz-adult-bar {
   font-size: 14px;
-  padding: 5px 10px;
+  padding: 4px 10px;
   box-sizing: border-box;
   -mox-box-sizing: border-box;
   position: relative;
