--- a/cliqz@cliqz.com/chrome/skin/browser_new.css
+++ b/cliqz@cliqz.com/chrome/skin/browser_new.css
@@ -70,11 +70,11 @@
 */
 
 .cqz-result-selected {
-	background-color: #cccccc;
+	background-color: #333333;
 	border-radius: 0 3px 0 0;
 	position: absolute;
-	height: 16px;
-	width: 16px;
+	height: 14px;
+	width: 14px;
 	top: 10px;
 	left: -20px;
 	z-index: 1;
@@ -112,7 +112,7 @@
 }
 
 .cqz-result-center {
-	width: 60%;
+	width: 85%;
 	padding: 0px 20px;
 	display: inline-block;
 	overflow: hidden;
@@ -124,6 +124,8 @@
 	font-size: 18px;
 	color: #8a52a2;
   width: 90%;
+  margin-bottom: 6px;
+  margin-top: -4px;
 }
 
 /* unvisited result - cliqz */
@@ -163,7 +165,7 @@
 }
 */
 .cqz-result-desc {
-    /*margin-top: 2px;*/
+    margin-top: 4px;
 }
 
 /*
@@ -203,12 +205,12 @@
 
 .cqz-image {
     display: inline-block;
-    width: 96px; /* 16 */
-    height: 54px; /* 9 */
+    width: 114px; /* 16 */
+    height: 64px; /* 9 */
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
-    margin: 23px -4px 0px 22px;
+    margin: 18px -4px 0px 22px;
     position: relative;
 }
 
@@ -702,7 +704,7 @@
 	font-size: 14px;
   padding: 0 9px 0 9px;
   line-height: 26px;
-  margin: 0 0 9px 0;
+  margin: 0 7px 9px 0;
   max-width: 150px;
   white-space: nowrap;
   text-overflow: ellipsis;
