--- a/cliqz@cliqz.com/chrome/skin/browser_new.css
+++ b/cliqz@cliqz.com/chrome/skin/browser_new.css
@@ -113,19 +113,17 @@
 
 .cqz-result-center {
 	width: 85%;
-	padding: 0px 20px;
+	padding: 14px 22px;
 	display: inline-block;
 	overflow: hidden;
-  cursor:pointer;
+  cursor: pointer;
 }
 
 /* visited result - history, bookmark, ...*/
 .cqz-result-title {
 	font-size: 18px;
-	color: #8a52a2;
+	color: #333333;
   width: 90%;
-  margin-bottom: 6px;
-  margin-top: -4px;
 }
 
 .cqz-result-title span {
@@ -134,7 +132,7 @@
 
 /* unvisited result - cliqz */
 .cqz-result-box[type^="cliqz-results sources-"] .cqz-result-title {
-	color: #5267a2;
+	color: #506bb8;
 }
 
 /*
@@ -153,6 +151,7 @@
 	/*text-overflow: clip !important;*/
 	display: inline-block;
   width: 90%;
+  margin-top: 6px;
 }
 
 .cqz-result-url-ssl {
@@ -169,9 +168,9 @@
 }
 */
 .cqz-result-desc {
-    margin-top: 4px;
-    line-height: 1em;
+    margin-top: 6px;
     max-height: 2em;
+    vertical-align: top;
 }
 
 /*
@@ -637,13 +636,13 @@
 }
 
 .cqz-celeb-images {
-    height: 60px;
+    height: 64px;
     overflow: hidden;
-    width: 85%;
+    width: 60%;
 }
 
 .cqz-celeb-image {
-    height: 60px;
+    height: 64px;
     margin-right: 6px;
     border-radius: 3px;
 }
@@ -651,19 +650,17 @@
 .cqz-celeb-who {
     font-size: 18px;
     margin: 10px 0px 7px 0px;
-}
-.cqz-celeb-who span {
-    color: #ccc;
+    color: #506bb8;
 }
 
 .cqz-celeb-social {
-    height: 20px;
-    margin-top: 8px;
-    margin-right: 8px;
+    height: 22px;
+    margin-top: 10px;
+    margin-right: 9px;
 }
 
 .cqz-celeb-desc {
-  font-size: 16px;
+  font-size: 14px;
   line-height: 1em;
   height: 2.1em;
   overflow: hidden;
@@ -715,6 +712,10 @@
 	padding-top: 15px;
 }
 
+.cqz-vert-center1 {
+  position: absolute;
+}
+
 .cqz-vert-center {
 	position: absolute;
 	top: 50%;
@@ -725,12 +726,18 @@
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
+    vertical-align: top;
 }
 
 
 /* history */
 .cliqz-pattern {
   padding-left: 19px;
+}
+
+.cqz-result-pattern {
+  padding: 15px 22px;
+  box-sizing: border-box;
 }
 
 .cliqz-pattern-result-container {
@@ -778,8 +785,8 @@
 }
 
 .cliqz-pattern-title-h2 {
-  padding-top: 15px;
-  padding-bottom: 10px;
+  margin-bottom: 14px;
+  cursor: default;
 }
 
 .cliqz-pattern-title-h3 {
@@ -787,9 +794,8 @@
   visibility: hidden;
   height: 17px;
   */
-  padding-top: 12px;
-  padding-bottom: 8px;
-
+  margin-bottom: 8px;
+ cursor: default;
 }
 
 .cliqz-pattern-results {
@@ -800,19 +806,30 @@
   padding-left: 20px;
   background-repeat: no-repeat;
   background-position: left center;
-  background-size: 16px 16px;
+  background-size: 14px 14px;
+  height: 16px;
+  margin-bottom: 5px;
 }
 
 .cliqz-pattern-element-title {
-  color:rgba(128,0,128,0.60);
+  color: #8c275f;
   max-width: 50%;
   display: inline-block;
+  font-size: 14px;
+  height: 16px;
+  overflow-x: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 
 .cliqz-pattern-element-link {
   margin-left: 8px;
   color: #999999;
   display: inline-block;
+  height: 16px;
+  overflow-x: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 
 .cliqz-pattern-element-h2 {
@@ -976,7 +993,9 @@
 
 
 .cqz-one-line {
-  height: 1.3em;
+  max-height: 1.3em;
+  max-width: 85%;
+  overflow: hidden;
 }
 /*---------- CLIQZ EZ ---------- thuy@cliqz.com--------------*/
 .EZ-Cliqz-Header{
@@ -1038,14 +1057,22 @@ padding-top:5px;
  margin-left: 18px
 }
 
+.ez-feedback {
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
+  color: gray;
+}
+
 .cqz-link {
   color: #88baf8;
   margin-right: 10px;
 }
-
+/*
 [arrow="true"] *[selectable]{
   text-decoration: underline;
 }
 [arrow="true"][selectable]{
   text-decoration: underline;
 }
+*/
