--- a/cliqz@cliqz.com/chrome/skin/browser_new.css
+++ b/cliqz@cliqz.com/chrome/skin/browser_new.css
@@ -111,7 +111,7 @@
 }
 
 .cqz-result-center {
-	width: 85%;
+	width: 80%;
 	padding: 14px 22px;
 	display: inline-block;
 	overflow: hidden;
@@ -168,7 +168,7 @@
 */
 .cqz-result-desc {
     margin-top: 6px;
-    max-height: 2em;
+    max-height: 22px;
     vertical-align: top;
 }
 
@@ -215,6 +215,11 @@
     background-repeat: no-repeat;
     margin: 18px -4px 0px 22px;
     position: relative;
+}
+
+.cqz-image-news {
+   position: relative;
+   top: -14px;
 }
 
 .cqz-image-round {
@@ -276,12 +281,12 @@
 .cqz-ez-generic-opt {
  background-color: #efefef;
  min-width: 130px;
- max-width: 150px;
+ max-width: 174px;
  height: 132px;
  margin-left: 9px;
  text-align: center;
  box-sizing: border-box;
- padding: 7px 7px 0 7px;
+ padding: 7px 18px 0 18px;
  border-radius: 3px;
  color: #323232;
 }
@@ -290,7 +295,7 @@
   background-repeat: no-repeat;
   height: 65px;
   width: 65px;
-  margin: 17px auto;
+  margin: 14px auto;
   background-position: center;
   background-size: contain;
 }
@@ -690,7 +695,7 @@
 }
 
 .cqz-ez-btn:hover, .cqz-ez-btn[arrow='true'] {
-  background-color: red !important;
+  background-color: #cccccc !important;
 }
 
 .cqz-result-box *[url]:hover {
@@ -826,6 +831,7 @@
 }
 
 .cliqz-pattern-element-link {
+  max-width: 30%;
   margin-left: 8px;
   color: #999999;
   display: inline-block;
@@ -1064,7 +1070,7 @@ padding-top:5px;
   position: absolute;
   bottom: 10px;
   right: 10px;
-  color: gray;
+  color: #cccccc;
 }
 
 .cqz-link {
