--- a/cliqz@cliqz.com/chrome/skin/browser_new.css
+++ b/cliqz@cliqz.com/chrome/skin/browser_new.css
@@ -146,7 +146,7 @@
 
 
 .cqz-result-url {
-	color: #999999;
+	color: #666666;
 	/*text-overflow: clip !important;*/
 	display: inline-block;
   width: 90%;
@@ -155,7 +155,7 @@
 
 .cqz-result-url-ssl {
     padding-left: 13px;
-    background: url(chrome://cliqzres/content/skin/lock_light.png) no-repeat 2px center;
+    background: url(chrome://cliqzres/content/skin/lock_light.png) no-repeat 2px 5px;
 }
 
 .cqz-result-path {
