--- a/cliqz@cliqz.com/chrome/skin/browser_new.css
+++ b/cliqz@cliqz.com/chrome/skin/browser_new.css
@@ -412,7 +412,7 @@
 
 /* EZ video */
 .cqz-ez-video-title {
-  background-image: url(http://cdn.cliqz.com/extension/EZ/video/y_search.png);
+  background-image: url(http://cdn.cliqz.com/extension/EZ/video/logo.svg);
   margin-bottom: 18px;
 }
 
