--- a/cliqz@cliqz.com/chrome/skin/browser_new.css
+++ b/cliqz@cliqz.com/chrome/skin/browser_new.css
@@ -1089,3 +1089,7 @@ padding-top:5px;
   text-decoration: underline;
 }
 */
+
+[arrow="true"]:hover .cqz-result-title {
+  text-decoration: underline;
+}
