--- a/cliqz@cliqz.com/chrome/skin/browser_new.css
+++ b/cliqz@cliqz.com/chrome/skin/browser_new.css
@@ -25,7 +25,7 @@
 
 /* end browser*/
 #cliqz-results {
-    height: 302px;
+    height: 604px;
     position: relative;
     /* override linux default grey color */
     background: #fff;
@@ -792,6 +792,13 @@
   background-size: 15px 18.3px;
   background-repeat: no-repeat;
   display: inline-block;
+}
+
+.cliqz-pattern-title-h1 {
+  margin-bottom: 14px;
+  color: #333333;
+  cursor: default;
+  background-image: url(chrome://cliqzres/content/skin/history_document.png);
 }
 
 .cliqz-pattern-title-h2 {
