enable scroll remove 3 results limit

--- a/cliqz@cliqz.com/chrome/skin/browser_new.css
+++ b/cliqz@cliqz.com/chrome/skin/browser_new.css
@@ -25,10 +25,11 @@
 
 /* end browser*/
 #cliqz-results {
-    height: 302px;
+    height: 303px;
     position: relative;
     /* override linux default grey color */
     background: #fff;
+    overflow-y: scroll;
 }
 
 .cqz-result-h1 {
