Restored removed logo class for 1/3 height history entry.

--- a/cliqz@cliqz.com/chrome/skin/browser_new.css
+++ b/cliqz@cliqz.com/chrome/skin/browser_new.css
@@ -831,6 +831,11 @@
   text-decoration:none;
 }
 
+.cliqz-pattern-logo {
+background-image: url(chrome://cliqzres/content/skin/cliqz.png);
+background-color: #efefef
+}
+
 .cliqz-pattern-title-h1 {
   margin-bottom: 14px;
 }
