Bug fix, Correct Tab key behavior

--- a/cliqz@cliqz.com/chrome/skin/browser_new.css
+++ b/cliqz@cliqz.com/chrome/skin/browser_new.css
@@ -877,6 +877,11 @@
   text-overflow: ellipsis;
 }
 
+.cliqz-pattern-logo {
+  background-image: url(chrome://cliqzres/content/skin/cliqz.png);
+  background-color: #efefef
+}
+
 /* END history */
 
 /*  noResult  thuy@cliqz.com*/
