--- a/cliqz@cliqz.com/chrome/skin/browser_new_new.css
+++ b/cliqz@cliqz.com/chrome/skin/browser_new_new.css
@@ -379,3 +379,21 @@
     background-position: 1px center;
     background-repeat: no-repeat;
 }
+
+/* last search */
+.cliqz-urlbar-Last-search-container { max-width: 220px; overflow: hidden; }
+
+.cliqz-urlbar-Last-search {
+    background-size: 14px 10px;
+    color: white;
+    background-color: grey;
+    margin: 0px;
+    padding: 2px 6px 2px 6px;
+    margin-right: 3px;
+    border-radius: 1px;
+    max-width: 200px;
+    text-overflow: ellipsis;
+    overflow: hidden;
+}
+
+.hidden { visibility: hidden; display: none !important; }
