--- a/cliqz@cliqz.com/chrome/skin/browser_new_new.css
+++ b/cliqz@cliqz.com/chrome/skin/browser_new_new.css
@@ -373,6 +373,7 @@
     -mox-box-sizing: border-box;
     display: inline-block;
     margin-left: 20px;
+    color: #333333;
 }
 #PopupAutoCompleteRichResultCliqz .cqz-adult-options-btn:after { content: "⌃"; top: 3px; left: 3px; position: relative; }
 #PopupAutoCompleteRichResultCliqz .cqz-adult-options-btn:hover .cqz-adult-options { display: inline-block; }
